survey group 4 conclusio outline

--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -178,19 +178,39 @@ Finally, an analysis of the benefits that blockchain can bring to the supply cha
 \begin{itemize}
     \item The three most voted items were: \textit{"Better transaction integrity and visibility"}, \textit{"Reduction of risks (fraud/tampering/information leaks)"} and \textit{"Stronger working relationships with partners"}.
 
-    The first two items were expected to rank high. They directly relate to the security and traceability points of improvement already discussed - traceability makes it possible to view the records to make sure nothing suspicious is going on, and the security and immutability of the information makes it impossible to tamper with the data.
+    The first two items were expected to rank high. They directly relate to the security and traceability, points of improvement already discussed - traceability makes it possible to view the records to make sure nothing suspicious is going on, and the security and immutability of the information makes it impossible to tamper with the data.
     
-    The third point, "Stronger working relationships with partners", however,is interesting to see being chosen a high ranked benefit. The concept of strong relationships with partners is linked to  the concept of \textbf{internal supply chain trust}, which was already introduced in \ref{sec:advantes-blockchain}. The ability for partners to trust each other is what makes the supply chain possible and efficient to the standards of today. It seems that the professionals really do think of blockchain as a tool to improve this internal trust.
+    The third point, "Stronger working relationships with partners", however, is interesting to see being chosen a high ranked benefit. The concept of strong relationships with partners is linked to  the concept of \textbf{internal supply chain trust}, which was already introduced in \ref{sec:advantes-blockchain}. The ability for partners to trust each other is what makes the supply chain possible and efficient to the standards of today. It seems that the professionals really do think of blockchain as a tool to improve this internal trust.
     
     The selection of these 3 items as the most voted does not seem to be a coincidence. \textbf{Blockchain can be used as a source of truth for the supply chain and this leads to the side benefits of internal trust, better relationships with the partners, less fraud, less tampering, less leaks, among other benefits, all made possible because of the main characteristics: security and traceability.}
 \end{itemize}
 
 \subsection*{Conclusions from Group 4}
 
-%The respondents focused mostly on the following issues:
+From this group of questions, we can extract the most important points that a blockchain design for supply chain should focus on: traceability and securityas these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; 
 
-%Then they focused on these points of improvement:
+A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
 
-%Finally, the
+%FIRST, THE CONCLUSIONS FROM THE SUPPLY CHAIN PART OF THE QUESTIONS
 
-%Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on
+%THE COMMON LINKS TO EVERYTHING: SECURITY AND TRACEABILITY
+%ON THE POINTS OF IMPROVEMENT:TRACEABILITY, SUPPLY CONTROL, FRAUD DETECTION 1ST; THEN OTHERS RELATED TO SYNCHRONIZATION 2ND -> TRACEABILITY AND SYNCHRONIZATION AS THE RAW FOCUS THAT WILL HELP THE OTHERS;
+%ON THE FUNCTIONALITIES: AGAIN, 1ST ARE SECURITY, INTEROPERABILITY AND TRACEABILITY; THESE ARE EXACTLY THE SAME AS THE RAW POINTS OF IMPROVEMENT! THERE IS A CONNECTION HERE
+
+%NOW, THE CONCLUSIONS FROM THE BC+SC PART OF THE QUESTIONS
+
+%BEST USE CASES: FINANCIAL APPLICATIONS, REGULATORY COMPLIANCE AND AUDITING, SECURE DATA STORAGE, CONTRACT ENFORCEMENT
+% 2 OF THEM ARE PARTICULAR NEW FEATURES OF BLOCKCHAIN: FINANCIAL AND CONTRACT; THE OTHER 2 ARE IMPORTANT APPLICATIONS BASED ON SECURITY AND TRACEABILITY - AGAIN, THESE USE CASES RELATE TO THE POINTS OF IMPROVEMENT
+%FINALLY, ALL THE HIGHEST RATED BENEFITS ALSO RELATED TO THESE 2 POINTS...
+
+%IN THE END, IT ALL COMES DOWN TO 4 THINGS: TRACEABILITY THROUGH ..., SECURITY THROUGH..., FINANCIAL TRANSACTION MANAGEMENT...
+
+%Traceability and security items:
+% Fraud detection, tampering detection, access control, authorization, etc...
+
+
+
+%Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
+
+
+
