--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -17,3 +17,6 @@ Rank features to be implemented?
 We concluded also...
 
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+
+
+%subsection: relate to what the already existing projects do
