Chapter 4 conclusions finalized

--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -97,7 +97,7 @@ Looking at the graphics, the second question has a slightly higher agreement rat
 
 
 \subsection*{Conclusions from Group 3}
-
+% TODO: improve these conclusions
 
 
 \begin{itemize}
