--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -187,30 +187,35 @@ Finally, an analysis of the benefits that blockchain can bring to the supply cha
 
 \subsection*{Conclusions from Group 4}
 
-From this group of questions, we can extract the most important points that a blockchain design for supply chain should focus on: traceability and securityas these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; 
+This was the most important group of questions in that it provides direct information as to which functionalities the proposed system design should possess and implement. At the same time, these functionalities can be related to the points of improvement found, as well as to the issues validated in the previous groups of questions.
 
-A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
+\begin{itemize}
+    \item From group 3, we validated that \textbf{inventory management}, \textbf{quality assurance} and \textbf{getting accurate and timely data} are issues in the supply chain. On this group, the main points of improvement were found to focus on: \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. In a generalized way, the common links to both issues and points of improvement seem to be \textbf{security}, \textbf{traceability} and \textbf{synchronization}, effectively validating the initial concerns from the problem statement.
+    \item Another important conclusion to take from this set of questions are the features to include in the design for the blockchain system. These include the \textit{"Blockchain only features"}, functionalities implemented in an unique to the blockchain, as well as the standard \textit{"Information system features"}, which are the features that were found to be the most important to information systems in a supply chain.
+    \item By order of importance, the blockchain features are:
+    \begin{itemize}
+        \item Financial transactions.
+        \item Some form of regulatory auditing.
+        \item Enforceable contracts (smart contract functionality).
+        \item Secure data storage.
+        \item Asset management.
+    \end{itemize}
+    \item By order of importance, the most important information system requirements are:
+    \begin{itemize}
+        \item Security according to the latest requirements.
+        \item Interoperability between systems.
+        \item Real-time tracking and sharing of information with partners.
+        \item Controlled access for the users.
+    \end{itemize}
+\end{itemize}
 
-%FIRST, THE CONCLUSIONS FROM THE SUPPLY CHAIN PART OF THE QUESTIONS
-
-%THE COMMON LINKS TO EVERYTHING: SECURITY AND TRACEABILITY
-%ON THE POINTS OF IMPROVEMENT:TRACEABILITY, SUPPLY CONTROL, FRAUD DETECTION 1ST; THEN OTHERS RELATED TO SYNCHRONIZATION 2ND -> TRACEABILITY AND SYNCHRONIZATION AS THE RAW FOCUS THAT WILL HELP THE OTHERS;
-%ON THE FUNCTIONALITIES: AGAIN, 1ST ARE SECURITY, INTEROPERABILITY AND TRACEABILITY; THESE ARE EXACTLY THE SAME AS THE RAW POINTS OF IMPROVEMENT! THERE IS A CONNECTION HERE
-
-%NOW, THE CONCLUSIONS FROM THE BC+SC PART OF THE QUESTIONS
-
-%BEST USE CASES: FINANCIAL APPLICATIONS, REGULATORY COMPLIANCE AND AUDITING, SECURE DATA STORAGE, CONTRACT ENFORCEMENT
-% 2 OF THEM ARE PARTICULAR NEW FEATURES OF BLOCKCHAIN: FINANCIAL AND CONTRACT; THE OTHER 2 ARE IMPORTANT APPLICATIONS BASED ON SECURITY AND TRACEABILITY - AGAIN, THESE USE CASES RELATE TO THE POINTS OF IMPROVEMENT
-%FINALLY, ALL THE HIGHEST RATED BENEFITS ALSO RELATED TO THESE 2 POINTS...
-
-%IN THE END, IT ALL COMES DOWN TO 4 THINGS: TRACEABILITY THROUGH ..., SECURITY THROUGH..., FINANCIAL TRANSACTION MANAGEMENT...
-
-%Traceability and security items:
-% Fraud detection, tampering detection, access control, authorization, etc...
 
 
 
-%Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
+
+
+
+
 
 
 
