--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -1,5 +1,9 @@
 
 \section{Conclusions}
+
+%Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
+
+
 Extract from the answers in the results a relevant conclusion, to be used in the following chapter.
 
 From group 1, we concluded...
