Survey chapter finished

--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -102,7 +102,7 @@ This statement may be based on many assumptions, which gives rise to some more q
 
 Thus, the questions that need to be answered first, in order to reach a conclusion towards the main thesis statement are the following:
 \begin{enumerate}
-\item \textbf{What supply chain issues and requirements do the experts really find the most important?}
+\item \textbf{What supply chain issues, improvements and requirements do the experts really find the most important?}
 \item \textbf{What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?}
 \item \textbf{Is it possible to build a feasible architectural design, by using such a tool implement all these requirements?}
 \end{enumerate}
@@ -132,18 +132,20 @@ Each of these focuses on reaching a conclusion towards the answers that underlie
 \subsection{Survey Research - Supply Chain Issues Validation And Requirements Elicitation}
 \label{sec:survey-approach}
 % The survey will serve to support "..." and take conclusions about whether "..."
-The first question to answer in order to reach any conclusion is \textbf{\textit{"What supply chain issues and requirements do the experts really find the most important?"}}. As already mentioned, the other questions depend on the answers that we reach for this question.
+The first question to answer in order to reach any conclusion is \textbf{\textit{"What supply chain issues, improvements and requirements do the experts really find the most important?"}}. As already mentioned, the other questions depend on the answers that we reach for this question.
 
 %TODO: should the verbs be in the past, present or future here?
 % What did you choose to do?
 The proposed way that was chosen to get an answer was an online \textbf{survey}. The survey serves the following purposes:
 
 \todo{fcorreia: aqui diria "used" em vez de "chosen", para não levantar perguntas. No capitulo sobre isto, mais abaixo, certifica-te de que mencionas que não foi possível conduzir entrevistas com peritos (por exemplo), o que teria sido fixe para complementar os resultados do survey.}
+%TODO: FIX THESE STATEMENTS BELOW TO WHAT IT IS NOW
 
 \begin{itemize}
 \item Collecting quantitative data on the relevance of the issues that supply chain management suffers from as well. \todo{fcorreia: as well?}
 \item Collecting quantitative and qualitative data on which are the major points of improvement and compare their relative importance.
 \item Collecting quantitative and qualitative data on which issues and improvement points the experts think Blockchain can help the most with, and which are already taken care of by other solutions.
+\item Collecting quantitative and qualitative data on which the functionalities that supply chain requires of information systems and blockchain.
 \item Correlate some of the data collected in the previous point and reach some extra conclusions that might help decide on the validity of the results.
 \end{itemize}
 
