--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -1,26 +1,37 @@
 
 \section{Conclusions}
 
+\subsection{Survey Conclusions}
 %Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on; though these 2 are the focus, features such as X, Y, Z must not be forgotten, since they ranked high on both information system features and blockchain applicability to the SC; A good blockchain design for the SC should not only feature NEW use cases that the blockchain brings to SC, like financial transactions, but also feature improved features from the already existing systems.
 
+Having analyzed all the groups of questions from the survey, it should now be possible to have an answer for the first question of the thesis sub-statements, presented in the problem statement: \textit{"What supply chain issues, improvements and requirements do the experts really find the most important?"}.
 
-Extract from the answers in the results a relevant conclusion, to be used in the following chapter.
+Most of the conclusions for the survey were summarized in the analysis of group 4. These conclusions included the most important issues of the supply chain, points of improvement, blockchain features and information system functionalities important to the design.
 
-From group 1, we concluded...
 
-From group 2, we concluded...
+\par \textbf{Issues} - These include \textbf{inventory management}, \textbf{quality assurance}, \textbf{} and \textbf{lack of accurate and timely data}. This last item was confirmed by the respondents to have a correlation to the lack of good integration and synchronization tools and to be one of the possible causes for the difficulties in planning management and product cycle delays.
 
-From group 3, we concluded...
+\par \textbf{Point of improvement} - These include \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. These items reflect themselves on the feature requirements that follow up.
 
-From group 4:
+\par \textbf{Blockchain requirements} - These include, but are not limited to \textbf{financial transactions}, \textbf{regulatory auditing and compliance}, \textbf{enforceable contracts} (smart contract functionality), \textbf{secure data storage} and \textbf{asset management}.
 
-Rank points of improvement?
+\par \textbf{Blockchain and information system requirements}
+\begin{itemize}
+    \item Financial transactions.
+    \item Some form of regulatory auditing.
+    \item Enforceable contracts (smart contract functionality).
+    \item Secure data storage.
+    \item Asset management.
+    \item Security according to the latest requirements.
+    \item Interoperability between systems.
+    \item Real-time tracking and sharing of information with partners.
+    \item Controlled access for the users.
+\end{itemize}
 
-Rank features to be implemented?
-
-We concluded also...
-
+These are important contributions from the experts of the area, though with a bigger sample, the answers would have been more representative. The next chapter will focus on these requirements as the major points of focus for the design.
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
 
 
 %subsection: relate to what the already existing projects do
+\subsection{Comparison to the state-of-the-art projects}
+\todo{pedro: It is an interesting comparison, but I already said in the state of the art that no project approached all the concerns, so this is not the most important part to focus at the moment; will do it if I have time, though, after the next chapter...}
