--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -1,4 +1,3 @@
-
 The survey was written during the months of March and April, 2018, with results being collected from the end of April up until the mid of June. The purpose, methodology and results of the survey are analyzed in this chapter, leading to the validation of the issues mentioned in the previous chapters. The survey and analysis done here also serves as a basis for the requirements that were used to build a Proof-of-Concept (PoC) prototype. 
 
 %Maybe push this later to the next chapter instead?
@@ -10,7 +9,7 @@ However, due to various factors, the survey and collection of results was delaye
 
 
 \section{Purpose and Target}
-Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in \ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues and requirements do the experts really find the most important?"}. 
+Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in \ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues, improvements and requirements do the experts really find the most important?"}. 
 
 \todo{fcorreia: aqui, ou algures, precisas de explicar que o objetivo era que a tua abordagem fosse guiada por necessidades da prática atual no domínio das SCs. Reconheceu-se que o importante seria obter esse conhecimento a partir de peritos da área. Mostrando-se impossível ter acesso direto a essas pessoaos, a forma arranjada para obter esse conhecimento foi usando um survey}
 
