Prototype introduction and section 1 (framework choice) finished

--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -314,6 +314,7 @@ He concluded that Ethereum is more of a general purpose platform, while Fabric t
 
 
 \subsection{Performance}
+\label{sec-performance-comparison}
 The difference in performance of various blockchain platforms is a crucial topic to address, that might lead to choosing one platform over another, with similar functionalities. In the case of Supply Chain, it might be important to measure the difference in performance of Ethereum and Hyperledger, for instance. 
 
 Pongnumkul has conducted a performance analysis of private deployments of these platforms \cite{Pongnumkul2017} and he reached some interesting conclusions. In summary, \textbf{Hyperledger's performance is higher in every aspect than Ethereum's (on a private deployment)}, but, for the same resources, \textbf{Ethereum can actually handle a higher number of concurrent transactions}. 
