--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -1,5 +1,6 @@
 
 \subsection{Group 4 - Supply Chain Standalone Points of Improvement and Blockchain+SC points of Applicability and Improvement}
+\label{sec-survey-improvement-functionalities}
 
 The first goal for this part of the survey is to find out the points of improvement for supply chain. What is being questioned are not the issues of the supply chain themselves, which were already asked, but what parts of supply chain, even though they may already work well, could work even better.
 
