--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -93,7 +93,7 @@ The analysis of the answers is done through bar graphics (some with frequency po
 }
 %% PUT THESE INTO A TABLE AND EXPLAIN A LITTLE BETTER WHICH ONES ARE USED, WHEN AND WHY
 
-% TODO: change table caption
+% TODO: change table caption and fix table format 
 
 %%%%%%%%%%%% TABLE START%%%%%%%%%%%%%%
 
