--- a/thesis.tex
+++ b/thesis.tex
@@ -19,7 +19,7 @@
 \usepackage{soul} % provides yellow-marker highlighting among other features
 \usepackage{verbatim} % provides the 'comment' environment among other features
 \usepackage{xifthen} % provides \ifthenelse 
-
+\usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{pbox}
 \usepackage[section]{placeins} % stops floats (figures, tables...) to appear outside the section where they are placed.
