--- a/prototype/prototypeconclusion.tex
+++ b/prototype/prototypeconclusion.tex
@@ -1,3 +1,5 @@
 \section{Conclusions}
 
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+
+%CHANGE NAME TO SUMMARY
