--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -11,24 +11,37 @@ Most of the conclusions for the survey were summarized in the analysis of group 
 
 \par \textbf{Issues} - These include \textbf{inventory management}, \textbf{quality assurance}, \textbf{} and \textbf{lack of accurate and timely data}. This last item was confirmed by the respondents to have a correlation to the lack of good integration and synchronization tools and to be one of the possible causes for the difficulties in planning management and product cycle delays.
 
-\par \textbf{Point of improvement} - These include \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. These items reflect themselves on the feature requirements that follow up.
+\par \textbf{Point of improvement} - These include \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. These items reflect themselves on the feature requirements that were elicited. The results can therefore be crossed with the points of improvement to make more refined logical groups of requirements:
 
-\par \textbf{Blockchain requirements} - These include, but are not limited to \textbf{financial transactions}, \textbf{regulatory auditing and compliance}, \textbf{enforceable contracts} (smart contract functionality), \textbf{secure data storage} and \textbf{asset management}.
-
-\par \textbf{Blockchain and information system requirements}
-\begin{itemize}
-    \item Financial transactions.
-    \item Some form of regulatory auditing.
-    \item Enforceable contracts (smart contract functionality).
-    \item Secure data storage.
-    \item Asset management.
-    \item Security according to the latest requirements.
-    \item Interoperability between systems.
-    \item Real-time tracking and sharing of information with partners.
-    \item Controlled access for the users.
-\end{itemize}
+%%% TABLE START %%%%%%%%%%%
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[]
+    \centering
+    \begin{tabular}{|l|l|}
+    \hline
+    \textbf{Area}                                                                                              & \textbf{Requirements}                                                                                                              \\ \hline
+    \multirow{3}{*}{Security}                                                                                  & Security according to the latest requirements                                                                                      \\ \cline{2-2} 
+                                                                                                               & Controlled access for the users                                                                                                    \\ \cline{2-2} 
+                                                                                                               & Secure data storage                                                                                                                \\ \hline
+    \multirow{4}{*}{Traceability}                                                                              & Regulatory auditing                                                                                                                \\ \cline{2-2} 
+                                                                                                               & Fraud detection                                                                                                                    \\ \cline{2-2} 
+                                                                                                               & Asset management                                                                                                                   \\ \cline{2-2} 
+                                                                                                               & Real-time tracking information                                                                                                     \\ \hline
+    \multirow{3}{*}{Synchronization}                                                                           & Interoperability between systems                                                                                                   \\ \cline{2-2} 
+                                                                                                               & Development of industry standards                                                                                                  \\ \cline{2-2} 
+                                                                                                               & \begin{tabular}[c]{@{}l@{}}Real-time sharing of information with partners, leading to \\ better working relationships\end{tabular} \\ \hline
+    \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Transaction \\ Enforcement and\\ Financial domain\end{tabular}} & Financial transactions                                                                                                             \\ \cline{2-2} 
+                                                                                                               & Enforceable contracts (smart contract functionality)                                                                               \\ \hline
+    \end{tabular}
+    \caption{Elicited requirements grouped by improvement area of focus.}
+    \label{table:elicited-requirements-survey}
+    \end{table}
+%%% TABLE END %%%%%%%%%%%%%%%
 
 These are important contributions from the experts of the area, though with a bigger sample, the answers would have been more representative. The next chapter will focus on these requirements as the major points of focus for the design.
+%TODO: bigger conclusion
+
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
 
 
